# hy340-project

./: .gitignore  .mailmap  CMakeLists.txt  CONTRIBUTING.md  README.md  compile.sh
.scripts/glab/: add_due_date_to_issues.py  create_issues_for_manager_implementation.py  create_issues_for_managers_api.py
.scripts/install/: source_bash.sh
.scripts/refactor/: update_includes.sh
cmake/: bison-parser.cmake  flex-scanner.cmake  flex_bison.cmake
demo/: CMakeLists.txt
demo/icode/: main.cpp  test.alpha
demo/lex/: al.c
demo/lex/al/: al.c  al.cpp
demo/lex/al/input_files/: comments.txt  complex_input.txt  identifiers.txt  integers.txt  keywords.txt  operator.txt  punctation.txt  reals.txt  strings.txt
demo/lex/al/input_files/errors_files/: invalid_escape_char.txt  not_closed_comment.txt  not_closed_string.txt
demo/syntax/parser/: main.cpp
demo/tcode/: main.cpp
doc/: manager_duties.txt  stack.txt
include/alpha/icode/: expr.h  opcode.h
include/alpha/icode/quad/: quad.h  table.h
include/alpha/lang/icode/: expr.h
include/alpha/lang/icode/quad/: quad.h  table.h
include/alpha/lang/lex/: error.h  scanner.h  status.h
include/alpha/lang/symbol/: function.h  scope_space_manager.h  symbol.h  table.h  table_entry.h  table_manager.h  variable.h
include/alpha/lang/syntax/: error.h  loop_counter.h
include/alpha/lang/syntax/manager/: nonterminal.h  terminal.h
include/alpha/lang/tcode/abc/: table.h  writer.h
include/alpha/lang/token/: token.h
include/alpha/lex/: alpha_lex_status.h  error.h  scanner.h  status.h
include/alpha/symbol/: function.h  scope_space_manager.h  symbol.h  table.h  table_entry.h  table_key.h  table_manager.h  variable.h
include/alpha/syntax/: error.h  loop_counter.h
include/alpha/syntax/handler/: block.h
include/alpha/syntax/handler/symbol/: symbol.h
include/alpha/syntax/holder/: Symbol.h  expr.h
include/alpha/syntax/manager/: nonterminal.h  terminal.h
include/alpha/syntax/manager/nonterminal/: assignexpr.h  block.h  block_body.h  block_close.h  breakstmt.h  call.h  callsuffix.h  const.h  continuestmt.h  elist.h  elist_opt.h  expr.h  expr_m.h  forstmt.h  forstmt_m.h  forstmt_n.h  forstmt_pre.h  funcbody.h  funcbody_post.h  funcbody_pre.h  funcdef.h  funcprefix.h  idlist.h  idlist_id.h  idlist_opt.h  ifstmt.h  ifstmt_else.h  ifstmt_if.h  indexed.h  indexed_opt.h  indexedelem.h  loopstmt.h  lvalue.h  member.h  methodcall.h  normcall.h  objectdef.h  primary.h  returnstmt.h  stmt.h  (+5 more)
include/alpha/syntax/manager/terminal/: function.h  identifier.h
include/alpha/tcode/abc/: table.h  writer.h
include/alpha/tcode/abc/consts/: user_func.h
include/alpha/tcode/abc/instruction/: arg.h  instruction.h  opcode.h
include/alpha/token/: alpha_token.h  category.h  token.h
include/alpha/vm/abc/instruction/: arg.h  instruction.h  opcode.h
include/alpha/vm/arch/cpu/: cpu.h
include/alpha/vm/arch/mem/: cell.h  memory.h
include/alpha/vm/loader/: loader.h
include/alpha/vm/parser/: parser.h
include/alpha/vm/runtime/libint/: lib_functions.h
include/alpha/vm/runtime/messages/: error.h
include/alpha/vm/runtime/table/: table.h
include/collections/: stack.h
include/token/: alpha_token.h  alpha_token_category.h  alpha_token_t.h
include/utils/: enums.h  warnings.h
src/: CMakeLists.txt
src/alpha/icode/: expr.cpp
src/alpha/icode/quad/: quad.cpp  table.cpp
src/alpha/lang/: CMakeLists.txt  main.cpp
src/alpha/lang/icode/: expr.cpp
src/alpha/lang/icode/quad/: quad.cpp  table.cpp
src/alpha/lang/lex/: error.cpp  scanner.l
src/alpha/lang/symbol/: function.cpp  scope_space_manager.cpp  symbol.cpp  table.cpp  table_manager.cpp  variable.cpp
src/alpha/lang/syntax/: error.cpp  loop_counter.cpp  parser.y
src/alpha/lang/syntax/manager/nonterminal/: assignexpr.cpp  block.cpp  block_body.cpp  block_close.cpp  block_open.cpp  breakstmt.cpp  call.cpp  callsuffix.cpp  const.cpp  continuestmt.cpp  elist.cpp  elist_opt.cpp  expr.cpp  forstmt.cpp  forstmt_m.cpp  forstmt_n.cpp  forstmt_pre.cpp  funcargs.cpp  funcbody.cpp  funcbody_post.cpp  funcbody_pre.cpp  funcdef.cpp  funcprefix.cpp  idlist_id.cpp  ifstmt.cpp  ifstmt_else.cpp  ifstmt_if.cpp  indexed.cpp  indexed_opt.cpp  indexedelem.cpp  loop_end.cpp  loop_start.cpp  loopstmt.cpp  lvalue.cpp  member.cpp  methodcall.cpp  normalcall.cpp  objectdef.cpp  primary.cpp  returnstmt.cpp  (+6 more)
src/alpha/lang/syntax/manager/terminal/: function.cpp  identifier.cpp
src/alpha/lang/tcode/abc/: table.cpp  writer.cpp
src/alpha/lang/tcode/abc/consts/: consts.cpp  user_func.cpp
src/alpha/lang/tcode/abc/instruction/: arg.cpp  instruction.cpp
src/alpha/lang/token/: token.cpp
src/alpha/lex/: error.cpp  scanner.l
src/alpha/symbol/: function.c  function.cpp  scope_space_manager.cpp  symbol.cpp  table.cpp  table_manager.cpp  variable.c  variable.cpp
src/alpha/syntax/: error.cpp  parser.y
src/alpha/syntax/handler/: block.cpp
src/alpha/syntax/handler/symbol/: symbol.cpp
src/alpha/syntax/holder/: expr.cpp  symbol.cpp
src/alpha/syntax/manager/nonterminal/: assignexpr.cpp  block.cpp  block_close.cpp  block_open.cpp  (+39 more)
src/alpha/tcode/abc/: table.cpp  writer.cpp
src/alpha/token/: alpha_token.c  token.cpp
src/alpha/vm/: CMakeLists.txt  main.cpp
src/alpha/vm/abc/instruction/: arg.cpp  instruction.cpp
src/alpha/vm/arch/cpu/: cpu.cpp
src/alpha/vm/arch/cpu.cpp/: behaviour.cpp
src/alpha/vm/arch/cpu.cpp/execute/: arithm.cpp  etc.cpp  func.cpp
src/alpha/vm/arch/cpu/cpu.cpp/: behaviour.cpp
src/alpha/vm/arch/cpu/cpu.cpp/execute/: arithm.cpp  bool.cpp  etc.cpp  func.cpp  jumps.cpp  table.cpp
src/alpha/vm/arch/mem/: cell.cpp
src/alpha/vm/arch/mem/code/: table.cpp
src/alpha/vm/arch/mem/consts/: consts.cpp  user_func.cpp
src/alpha/vm/arch/mem/stack/: stack.cpp
src/alpha/vm/loader/: loader.cpp
src/alpha/vm/parser/: parser.cpp
src/alpha/vm/runtime/libint/: lib_functions.cpp
src/alpha/vm/runtime/messages/: error.cpp
src/alpha/vm/runtime/table/: table.cpp
src/collections/: stack.c
src/lex/: scanner.l
src/token/: alpha_token.c  alpha_token_t.c
test/: CMakeLists.txt  test.cpp
(+69 files in other folders)
